Feat: add more scripts
- Setup tzdata in Dockerfile, because it needs interactive with stdin
- Add wasm libraries(wasm-pack, cargo-generate) install and test script
- Add node install and test script
- Add vscode install and test script

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -2,11 +2,14 @@ FROM ubuntu:20.04
 LABEL maintainer "ekffu200098@gmail.com"
 
 # Setup
-RUN apt-get update && apt-get -y install sudo
+ARG DEBIAN_FRONTEND="noninteractive"
+ENV TZ="Asia/Seoul"
+
+RUN apt-get update && apt-get -y install sudo tzdata
 RUN adduser --disabled-password --gecos "" user \
-    && echo 'user:user' | chpasswd \ 
-    && adduser user sudo \ 
-    && echo 'user ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+    && echo "user:user" | chpasswd \
+    && adduser user sudo \
+    && echo "user ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 USER user
 WORKDIR /home/user
